load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test")
load("@io_bazel_rules_docker//container:container.bzl", "container_image")
load("@bazel_tools//tools/build_defs/pkg:pkg.bzl", "pkg_tar")

go_library(
    name = "go_default_library",
    srcs = ["clone-source.go"],
    importpath = "kubevirt.io/containerized-data-importer/cmd/cdi-cloner",
    visibility = ["//visibility:private"],
    deps = [
        "//pkg/common:go_default_library",
        "//pkg/util:go_default_library",
        "//pkg/util/prometheus:go_default_library",
        "//vendor/github.com/golang/snappy:go_default_library",
        "//vendor/github.com/prometheus/client_golang/prometheus:go_default_library",
        "//vendor/k8s.io/klog/v2:go_default_library",
    ],
)

go_binary(
    name = "cdi-cloner",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)

go_test(
    name = "go_default_test",
    srcs = [
        "clone-source_suite_test.go",
        "clone-source_test.go",
    ],
    embed = [":go_default_library"],
    deps = [
        "//pkg/util/prometheus:go_default_library",
        "//vendor/github.com/onsi/ginkgo/v2:go_default_library",
        "//vendor/github.com/onsi/gomega:go_default_library",
    ],
)

container_image(
    name = "cdi-cloner-image",
    architecture = select({
        "@io_bazel_rules_go//go/platform:linux_s390x": "s390x",
        "@io_bazel_rules_go//go/platform:linux_arm64": "arm64",
        "//conditions:default": "amd64",
    }),
    base = "//:centos_base",
    directory = "/usr/bin",
    entrypoint = ["/usr/bin/cloner_startup.sh"],
    files = [
        ":cdi-cloner",
        ":cloner_startup.sh",
    ],
    user = "1001",
    visibility = ["//visibility:public"],
)
