load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test")
load("@rules_oci//oci:defs.bzl", "oci_image")
load("@rules_pkg//:pkg.bzl", "pkg_tar")

go_library(
    name = "go_default_library",
    srcs = ["clone-source.go"],
    importpath = "kubevirt.io/containerized-data-importer/cmd/cdi-cloner",
    visibility = ["//visibility:private"],
    deps = [
        "//pkg/common:go_default_library",
        "//pkg/monitoring/metrics/cdi-cloner:go_default_library",
        "//pkg/util:go_default_library",
        "//pkg/util/prometheus:go_default_library",
        "//vendor/github.com/golang/snappy:go_default_library",
        "//vendor/golang.org/x/sys/unix:go_default_library",
        "//vendor/k8s.io/klog/v2:go_default_library",
    ],
)

go_binary(
    name = "cdi-cloner",
    embed = [":go_default_library"],
    visibility = ["//visibility:private"],
)

pkg_tar(
    name = "cdi-cloner-bin",
    srcs = [":cdi-cloner"],
    extension = "tar.gz",
    package_dir = "/usr/bin/",
    visibility = ["//visibility:private"],
)

pkg_tar(
    name = "cloner-startup",
    srcs = [":cloner_startup.sh"],
    extension = "tar.gz",
    package_dir = "/usr/bin/",
    visibility = ["//visibility:private"],
)

oci_image(
    name = "cdi-cloner-image",
    base = "//:centos_base",
    entrypoint = ["/usr/bin/cloner_startup.sh"],
    tars = [
        ":cdi-cloner-bin",
        ":cloner-startup",
    ],
    user = "1001",
    visibility = ["//visibility:public"],
    workdir = "/home/cdi-cloner",
)

go_test(
    name = "go_default_test",
    srcs = [
        "clone-source_suite_test.go",
        "clone-source_test.go",
    ],
    embed = [":go_default_library"],
    deps = [
        "//pkg/util/prometheus:go_default_library",
        "//vendor/github.com/onsi/ginkgo/v2:go_default_library",
        "//vendor/github.com/onsi/gomega:go_default_library",
    ],
)
