load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@io_bazel_rules_container_rpm//rpm:rpm.bzl", "rpm_image")

rpm_image(
    name = "cdi-importer-base-image",
    base = select({
        "@io_bazel_rules_go//go/platform:linux_arm64": "@fedora-aarch64//image",
        "//conditions:default": "@fedora//image",
    }),
    rpms = select({
        "@io_bazel_rules_go//go/platform:linux_arm64": [
            "@liburing-aarch64//file",
            "@libnbd-aarch64//file",
            "@libxcrypt-compat-aarch64//file",
            "@nbdkit-server-aarch64//file",
            "@nbdkit-basic-filters//file",
            "@nbdkit-curl-plugin//file",
            "@nbdkit-xz-filter//file",
            "@nbdkit-gzip-filter//file",
            "@qemu-img-aarch64//file",
            "@xen-libs-aarch64//file",
            "@libaio-aarch64//file",
            "@capstone-aarch64//file",
            "@ostree-libs-aarch64//file",
            "@containers-common-aarch64//file",
        ],
        "//conditions:default": [
            "@liburing//file",
            "@libnbd//file",
            "@libxcrypt-compat//file",
            "@nbdkit-server//file",
            "@nbdkit-basic-filters//file",
            "@nbdkit-vddk-plugin//file",
            "@nbdkit-curl-plugin//file",
            "@nbdkit-xz-filter//file",
            "@nbdkit-gzip-filter//file",
            "@qemu-img//file",
            "@xen-libs//file",
            "@libaio//file",
            "@capstone//file",
            "@ostree-libs//file",
            "@containers-common//file",
        ],
    }),
)

go_library(
    name = "go_default_library",
    srcs = ["importer.go"],
    importpath = "kubevirt.io/containerized-data-importer/cmd/cdi-importer",
    visibility = ["//visibility:private"],
    deps = [
        "//pkg/apis/core/v1beta1:go_default_library",
        "//pkg/common:go_default_library",
        "//pkg/controller:go_default_library",
        "//pkg/image:go_default_library",
        "//pkg/importer:go_default_library",
        "//pkg/util:go_default_library",
        "//pkg/util/prometheus:go_default_library",
        "//vendor/github.com/pkg/errors:go_default_library",
        "//vendor/k8s.io/api/core/v1:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/api/resource:go_default_library",
        "//vendor/k8s.io/klog/v2:go_default_library",
    ],
)

go_binary(
    name = "cdi-importer",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)

load(
    "@io_bazel_rules_docker//container:container.bzl",
    "container_image",
)

container_image(
    name = "cdi-importer-image",
    architecture = select({
        "@io_bazel_rules_go//go/platform:linux_arm64": "arm64",
        "//conditions:default": "amd64",
    }),
    base = ":cdi-importer-base-image",
    directory = "/usr/bin",
    entrypoint = [
        "/usr/bin/cdi-importer",
        "-alsologtostderr",
    ],
    files = [
        ":cdi-importer",
    ],
    visibility = ["//visibility:public"],
)
