load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["operator.go"],
    importpath = "kubevirt.io/containerized-data-importer/cmd/cdi-operator",
    visibility = ["//visibility:private"],
    deps = [
        "//pkg/apis/core/v1beta1:go_default_library",
        "//pkg/operator/controller:go_default_library",
        "//pkg/util:go_default_library",
        "//vendor/github.com/openshift/api/route/v1:go_default_library",
        "//vendor/github.com/openshift/api/security/v1:go_default_library",
        "//vendor/k8s.io/apiextensions-apiserver/pkg/apis/apiextensions/v1:go_default_library",
        "//vendor/k8s.io/kube-aggregator/pkg/apis/apiregistration/v1beta1:go_default_library",
        "//vendor/sigs.k8s.io/controller-runtime/pkg/client/config:go_default_library",
        "//vendor/sigs.k8s.io/controller-runtime/pkg/manager:go_default_library",
        "//vendor/sigs.k8s.io/controller-runtime/pkg/runtime/log:go_default_library",
        "//vendor/sigs.k8s.io/controller-runtime/pkg/runtime/signals:go_default_library",
    ],
)

go_binary(
    name = "cdi-operator",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)

load(
    "@io_bazel_rules_docker//container:container.bzl",
    "container_image",
)

container_image(
    name = "cdi-operator-image",
    base = "@fedora//image",
    directory = "/usr/bin",
    entrypoint = ["/usr/bin/cdi-operator"],
    files = [
        ":cdi-operator",
        "//tools/csv-generator",
    ],
    visibility = ["//visibility:public"],
    user = "1001",
    workdir = "/home/cdi-operator",
)
