load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@rules_oci//oci:defs.bzl", "oci_image")
load("@rules_pkg//:pkg.bzl", "pkg_tar")

go_library(
    name = "go_default_library",
    srcs = ["operator.go"],
    importpath = "kubevirt.io/containerized-data-importer/cmd/cdi-operator",
    visibility = ["//visibility:private"],
    deps = [
        "//pkg/operator/controller:go_default_library",
        "//pkg/util:go_default_library",
        "//staging/src/kubevirt.io/containerized-data-importer-api/pkg/apis/core/v1beta1:go_default_library",
        "//staging/src/kubevirt.io/containerized-data-importer-api/pkg/apis/forklift/v1beta1:go_default_library",
        "//vendor/github.com/kubernetes-csi/volume-data-source-validator/client/apis/volumepopulator/v1beta1:go_default_library",
        "//vendor/github.com/openshift/api/config/v1:go_default_library",
        "//vendor/github.com/openshift/api/route/v1:go_default_library",
        "//vendor/github.com/openshift/api/security/v1:go_default_library",
        "//vendor/github.com/prometheus-operator/prometheus-operator/pkg/apis/monitoring/v1:go_default_library",
        "//vendor/go.uber.org/zap/zapcore:go_default_library",
        "//vendor/k8s.io/apiextensions-apiserver/pkg/apis/apiextensions/v1:go_default_library",
        "//vendor/k8s.io/kube-aggregator/pkg/apis/apiregistration/v1:go_default_library",
        "//vendor/sigs.k8s.io/controller-runtime/pkg/cache:go_default_library",
        "//vendor/sigs.k8s.io/controller-runtime/pkg/client/config:go_default_library",
        "//vendor/sigs.k8s.io/controller-runtime/pkg/healthz:go_default_library",
        "//vendor/sigs.k8s.io/controller-runtime/pkg/log:go_default_library",
        "//vendor/sigs.k8s.io/controller-runtime/pkg/log/zap:go_default_library",
        "//vendor/sigs.k8s.io/controller-runtime/pkg/manager:go_default_library",
        "//vendor/sigs.k8s.io/controller-runtime/pkg/manager/signals:go_default_library",
        "//vendor/sigs.k8s.io/controller-runtime/pkg/metrics/server:go_default_library",
    ],
)

go_binary(
    name = "cdi-operator",
    embed = [":go_default_library"],
    visibility = ["//visibility:private"],
)

pkg_tar(
    name = "cdi-operator-bin",
    srcs = [":cdi-operator"],
    extension = "tar.gz",
    package_dir = "/usr/bin/",
    visibility = ["//visibility:private"],
)

oci_image(
    name = "cdi-operator-image",
    base = "//:centos_base",
    entrypoint = ["/usr/bin/cdi-operator"],
    tars = [
        ":cdi-operator-bin",
        "//tools/csv-generator:csv-generator-bin",
    ],
    user = "1001",
    visibility = ["//visibility:public"],
    workdir = "/home/cdi-operator",
)
