load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@rules_oci//oci:defs.bzl", "oci_image")
load("@rules_pkg//:pkg.bzl", "pkg_tar")

go_library(
    name = "go_default_library",
    srcs = ["uploadproxy.go"],
    importpath = "kubevirt.io/containerized-data-importer/cmd/cdi-uploadproxy",
    visibility = ["//visibility:private"],
    deps = [
        "//pkg/client/clientset/versioned:go_default_library",
        "//pkg/uploadproxy:go_default_library",
        "//pkg/util:go_default_library",
        "//pkg/util/cert/fetcher:go_default_library",
        "//pkg/util/cert/watcher:go_default_library",
        "//pkg/util/tls-crypto-watch:go_default_library",
        "//vendor/github.com/kelseyhightower/envconfig:go_default_library",
        "//vendor/github.com/pkg/errors:go_default_library",
        "//vendor/k8s.io/client-go/kubernetes:go_default_library",
        "//vendor/k8s.io/client-go/tools/clientcmd:go_default_library",
        "//vendor/k8s.io/klog/v2:go_default_library",
        "//vendor/sigs.k8s.io/controller-runtime/pkg/manager/signals:go_default_library",
    ],
)

go_binary(
    name = "cdi-uploadproxy",
    embed = [":go_default_library"],
    visibility = ["//visibility:private"],
)

pkg_tar(
    name = "cdi-uploadproxy-bin",
    srcs = [":cdi-uploadproxy"],
    extension = "tar.gz",
    package_dir = "/usr/bin/",
    visibility = ["//visibility:private"],
)

oci_image(
    name = "cdi-uploadproxy-image",
    base = "//:centos_base",
    entrypoint = [
        "/usr/bin/cdi-uploadproxy",
        "-alsologtostderr",
    ],
    tars = [":cdi-uploadproxy-bin"],
    user = "1001",
    visibility = ["//visibility:public"],
    workdir = "/home/cdi-uploadproxy",
)
