load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@io_bazel_rules_container_rpm//rpm:rpm.bzl", "rpm_image")

rpm_image(
    name = "cdi-uploadserver-base-image",
    base = select({
        "@io_bazel_rules_go//go/platform:linux_arm64": "@fedora-aarch64//image",
        "//conditions:default": "@fedora//image",
    }),
    rpms = select({
        "@io_bazel_rules_go//go/platform:linux_arm64": [
            "@libnbd-aarch64//file",
            "@qemu-img-aarch64//file",
            "@xen-libs-aarch64//file",
            "@libaio-aarch64//file",
            "@capstone-aarch64//file",
            "@liburing-aarch64//file",
        ],
        "//conditions:default": [
            "@libnbd//file",
            "@qemu-img//file",
            "@xen-libs//file",
            "@libaio//file",
            "@capstone//file",
            "@liburing//file",
        ],
    }),
)

go_library(
    name = "go_default_library",
    srcs = ["uploadserver.go"],
    importpath = "kubevirt.io/containerized-data-importer/cmd/cdi-uploadserver",
    visibility = ["//visibility:private"],
    deps = [
        "//pkg/common:go_default_library",
        "//pkg/uploadserver:go_default_library",
        "//pkg/util:go_default_library",
        "//vendor/k8s.io/klog/v2:go_default_library",
    ],
)

go_binary(
    name = "cdi-uploadserver",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)

load(
    "@io_bazel_rules_docker//container:container.bzl",
    "container_image",
)

container_image(
    name = "cdi-uploadserver-image",
    architecture = select({
        "@io_bazel_rules_go//go/platform:linux_arm64": "arm64",
        "//conditions:default": "amd64",
    }),
    base = ":cdi-uploadserver-base-image",
    directory = "/usr/bin",
    entrypoint = [
        "/usr/bin/cdi-uploadserver",
        "-alsologtostderr",
    ],
    files = [":cdi-uploadserver"],
    visibility = ["//visibility:public"],
)
