load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["uploadserver.go"],
    importpath = "kubevirt.io/containerized-data-importer/cmd/cdi-uploadserver",
    visibility = ["//visibility:private"],
    deps = [
        "//pkg/common:go_default_library",
        "//pkg/uploadserver:go_default_library",
        "//pkg/util:go_default_library",
        "//vendor/k8s.io/klog/v2:go_default_library",
    ],
)

go_binary(
    name = "cdi-uploadserver",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)

load(
    "@io_bazel_rules_docker//container:container.bzl",
    "container_image",
)

container_image(
    name = "cdi-uploadserver-image",
    architecture = select({
        "@io_bazel_rules_go//go/platform:linux_arm64": "arm64",
        "//conditions:default": "amd64",
    }),
    base = ":uploadserver_base",
    directory = "/usr/bin",
    entrypoint = [
        "/usr/bin/cdi-uploadserver",
        "-alsologtostderr",
    ],
    files = [":cdi-uploadserver"],
    visibility = ["//visibility:public"],
)

container_image(
    name = "uploadserver_base",
    tars = select({
        "@io_bazel_rules_go//go/platform:linux_arm64": [
            "//rpm:cdi_uploadserver_base_aarch64",
        ],
        "//conditions:default": [
            "//rpm:cdi_uploadserver_base_x86_64",
        ],
    }),
)
