load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test")
load("@rules_pkg//:pkg.bzl", "pkg_tar")

go_library(
    name = "go_default_library",
    srcs = ["openstack-populator.go"],
    importpath = "kubevirt.io/containerized-data-importer/cmd/openstack-populator",
    visibility = ["//visibility:private"],
    deps = [
        "//pkg/monitoring/metrics/openstack-populator:go_default_library",
        "//pkg/util/prometheus:go_default_library",
        "//vendor/github.com/gophercloud/gophercloud/v2:go_default_library",
        "//vendor/github.com/gophercloud/gophercloud/v2/openstack:go_default_library",
        "//vendor/github.com/gophercloud/gophercloud/v2/openstack/image/v2/imagedata:go_default_library",
        "//vendor/github.com/gophercloud/utils/v2/openstack/clientconfig:go_default_library",
        "//vendor/k8s.io/klog/v2:go_default_library",
    ],
)

go_binary(
    name = "openstack-populator",
    embed = [":go_default_library"],
    visibility = ["//visibility:private"],
)

pkg_tar(
    name = "openstack-populator-bin",
    srcs = [":openstack-populator"],
    package_dir = "/usr/bin/",
    visibility = ["//visibility:public"],
)

go_test(
    name = "go_default_test",
    srcs = [
        "openstack-populator_test.go",
        "openstack_populator_suite_test.go",
    ],
    embed = [":go_default_library"],
    deps = [
        "//vendor/github.com/onsi/ginkgo/v2:go_default_library",
        "//vendor/github.com/onsi/gomega:go_default_library",
    ],
)
