load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["ovirt-populator.go"],
    importpath = "kubevirt.io/containerized-data-importer/cmd/ovirt-populator",
    visibility = ["//visibility:private"],
    deps = [
        "//pkg/util/prometheus:go_default_library",
        "//vendor/github.com/prometheus/client_golang/prometheus:go_default_library",
        "//vendor/github.com/prometheus/client_model/go:go_default_library",
        "//vendor/k8s.io/klog/v2:go_default_library",
    ],
)

go_binary(
    name = "ovirt-populator",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
