load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@rules_pkg//:pkg.bzl", "pkg_tar")

go_library(
    name = "go_default_library",
    srcs = ["ovirt-populator.go"],
    importpath = "kubevirt.io/containerized-data-importer/cmd/ovirt-populator",
    visibility = ["//visibility:private"],
    deps = [
        "//pkg/monitoring/metrics/ovirt-populator:go_default_library",
        "//pkg/util/prometheus:go_default_library",
        "//vendor/k8s.io/klog/v2:go_default_library",
    ],
)

go_binary(
    name = "ovirt-populator",
    embed = [":go_default_library"],
    visibility = ["//visibility:private"],
)

pkg_tar(
    name = "ovirt-populator-bin",
    srcs = [":ovirt-populator"],
    extension = "tar.gz",
    package_dir = "/usr/bin/",
    visibility = ["//visibility:public"],
)
